# mlcc

./: .editorconfig  CMakeLists.txt  README.md  package.xml
config/: avia_stereo.yaml  camera.yaml  init_extrinsic  left.yaml  mid100_stereo.yaml  right.yaml  scene_config.yaml
include/: calib_camera.hpp  calib_single_camera.hpp  common.h  extrinsic_refine.hpp  global.hpp  mypcl.hpp  pose_refine.hpp
include/BA/: ba.hpp  mypcl.hpp  tools.hpp
launch/: calib_camera.launch  calib_single_camera.launch  extrinsic_refine.launch  global.launch  pose_refine.launch  tobinary.launch
result/: extrinsic.txt
rviz_cfg/: calib_camera.rviz  rosbag.rviz
scene1/: pose.json  ref.json
scene1/original_pose/: 0.json  1.json  2.json  3.json
scene2/: pose.json  ref.json
scene2/1/: 10.pcd
scene2/2/: 12.pcd  13.pcd
scene2/original_pose/: 0.json  1.json  2.json  3.json
source/: calib_single_camera.cpp  camera_calib.cpp  extrinsic_refine.cpp  global.cpp  pose_refine.cpp  tobinary.cpp
